Fri Jun  9 21:31:01 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fix fullscreen mode to work with new image placement code. Make
	it work with --auto-zoom and --stretch too.
    * Perform an antialiased pass after panning if needed.

Fri Jun  9 19:48:05 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Edge resistance when panning. Much better.

Thu Jun  8 22:02:50 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* First part of zooming/scaling rewrite. Only panning so far, but
	it works nice. Zooming is current *disabled*.

Sun Jun  4 15:44:05 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added a wrapper to imlib2. I was getting some subtle bugs from
	the singleton context (accidentally leaving context_antialias on,
	not blending when I should be etc), and to fix them I was adding
	lines and lines of context_set this, context_set that. I've
	wrapped the imlib calls in an imlib1 
	lots-of-params-per-function-call stylee, and now it's much more
	readable and harder to break.
	* In the process, made big speedups by not antialiasing when I
	needn't, or blending when I shouldn't etc. Also blew away a few
	hundred lines of context-setting.

Fri Jun  2 22:58:50 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed pixmap resizing bug properly this time ;-)

Thu Jun  1 19:36:19 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Correct oversite in sizing pixmaps.

Wed May 24 20:21:14 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Massively speeded up image rendering and therefore zooming by
	actually *thinking* about what I was doing and using a tiled
	pixmap GC and XFillRectangle for drawing the background
	checkerboard pattern. Much better. I'll clean it up a bit
	next.

Wed May 24 00:09:12 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed bug with --no-progressive and window resizing. The
	rendering and resizing code is a *mess* now, which I'll have to
	fix tomorrow (lots of duplication and a complex codepath). But at