@@ -66,8 +66,7 @@ winwidget_allocate(void)
    D_RETURN(ret);
 }
 
-winwidget
-winwidget_create_from_image(Imlib_Image im, char *name, char type)
+winwidget winwidget_create_from_image(Imlib_Image im, char *name, char type)
 {
    winwidget ret = NULL;
 
@@ -94,8 +93,7 @@ winwidget_create_from_image(Imlib_Image im, char *name, char type)
    D_RETURN(ret);
 }
 
-winwidget
-winwidget_create_from_file(feh_file * file, char *name, char type)
+winwidget winwidget_create_from_file(feh_file * file, char *name, char type)
 {
    winwidget ret = NULL;
 
@@ -305,7 +303,9 @@ winwidget_render_image(winwidget winwid, int resize, int alias)
 
    if (!opt.full_screen
        && ((feh_imlib_image_has_alpha(winwid->im))
-           || (winwid->im_x || winwid->im_y)))
+           || (winwid->im_x || winwid->im_y) || (winwid->w > winwid->im_w
+                                                 || winwid->h >
+                                                 winwid->im_h)))
       feh_draw_checks(winwid);
 
    if (resize && opt.full_screen)
@@ -322,24 +322,20 @@ winwidget_render_image(winwidget winwid, int resize, int alias)
          /* Image is larger than the screen (so want's shrinking), or it's
             smaller but wants expanding to fill it */
          ratio =
-            feh_calc_needed_zoom(&(winwid->zoom), winwid->im_w,
-                                 winwid->im_h, scr->width, scr->height);
+            feh_calc_needed_zoom(&(winwid->zoom), winwid->im_w, winwid->im_h,
+                                 scr->width, scr->height);
          if (ratio > 1.0)
          {
             /* height is the factor */
             winwid->im_x = 0;
             winwid->im_y =
-               ((int)
-                (scr->height -
-                 (winwid->im_h * winwid->zoom))) >> 1;
+               ((int) (scr->height - (winwid->im_h * winwid->zoom))) >> 1;
          }
          else
          {
             /* width is the factor */
             winwid->im_x =
-               ((int)
-                (scr->width -
-                 (winwid->im_w * winwid->zoom))) >> 1;
+               ((int) (scr->width - (winwid->im_w * winwid->zoom))) >> 1;
             winwid->im_y = 0;
          }
       }
@@ -353,11 +349,8 @@ winwidget_render_image(winwidget winwid, int resize, int alias)
    }
    feh_imlib_render_image_on_drawable_at_size(winwid->bg_pmap, winwid->im,
                                               winwid->im_x, winwid->im_y,
-                                              winwid->im_w *
-                                              winwid->zoom,
-                                              winwid->im_h *
-                                              winwid->zoom,
-                                              1,
+                                              winwid->im_w * winwid->zoom,
+                                              winwid->im_h * winwid->zoom, 1,
                                               feh_imlib_image_has_alpha
                                               (winwid->im), alias);
 
@@ -384,7 +377,8 @@ feh_calc_needed_zoom(double *zoom, int orig_w, int orig_h, int dest_w,
    D_RETURN(ratio);
 }
 
-Pixmap feh_create_checks(void)
+Pixmap
+feh_create_checks(void)
 {
    static Pixmap checks_pmap = None;
    Imlib_Image checks = NULL;
@@ -570,8 +564,7 @@ winwidget_unregister(winwidget win)
    D_RETURN_;
 }
 
-winwidget
-winwidget_get_from_window(Window win)
+winwidget winwidget_get_from_window(Window win)
 {
    winwidget ret = NULL;
 
