@@ -1,8 +1,13 @@
+Sat Jun 10 00:05:10 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Fixed check drawing after resize. Edge resistance against *all*
+	the edges, not just two of them ;-)
+
 Fri Jun  9 21:31:01 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Fix fullscreen mode to work with new image placement code. Make
 	it work with --auto-zoom and --stretch too.
-    * Perform an antialiased pass after panning if needed.
+	* Perform an antialiased pass after panning if needed.
 
 Fri Jun  9 19:48:05 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
